Increase sync threshold & add headers

--- a/templates/check_repodata.j2
+++ b/templates/check_repodata.j2
@@ -1,5 +1,6 @@
 #!/usr/bin/python
 # {{ ansible_managed }}
+# See {{ icinga_agent_role_git_repo }}/blob/master/templates/check_repodata.j2
 
 # check_repodata.py - a script for checking repo sync
 # states of content synchronized with Spacewalk,
