--- a/templates/spacewalk-answer-file.j2
+++ b/templates/spacewalk-answer-file.j2
@@ -1,3 +1,6 @@
+# {{ ansible_managed }}
+# See {{ icinga_agent_role_git_repo }}/blob/master/templates/spacewalk-answer-file.j2
+
 {% if spacewalk_answers is defined %}
 {% for item in spacewalk_answers %}
 {{ item }}
