--- a/templates/tftpd.j2
+++ b/templates/tftpd.j2
@@ -1,4 +1,6 @@
 # {{ ansible_managed }}
+# See {{ icinga_agent_role_git_repo }}/blob/master/templates/tftpd.j2
+
 # default: off
 # description: The tftp server serves files using the trivial file transfer \
 #       protocol.  The tftp protocol is often used to boot diskless \
