--- a/templates/spacewalk-answer-file.j2
+++ b/templates/spacewalk-answer-file.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
-# See {{ icinga_agent_role_git_repo }}/blob/master/templates/spacewalk-answer-file.j2
+# See {{ spacewalk_role_git_repo }}/blob/master/templates/spacewalk-answer-file.j2
 
 {% if spacewalk_answers is defined %}
 {% for item in spacewalk_answers %}
